# aeroforge-slicer

./: .gitignore  CMakeLists.txt
include/: SlicingParser.hpp
include/Geometry/: Coordinate3D.hpp  DepthBB.hpp  GeometryModel.hpp  Model.hpp  ObjectKey.hpp  Sort.hpp
include/Parser/: BaseParser.hpp  Factory.hpp  Parser.hpp  STEPParser.hpp  STLParser.hpp  ThreeMFParser.hpp  Utils.hpp
include/Reader/: AsciiReader.hpp  BaseReader.hpp  BinaryReader.hpp
include/Slicer/: BaseSlicer.hpp  FacetSlicer.hpp
src/: CMakeLists.txt  SlicingParser.cpp
src/Geometry/: GeometryModel.cpp  Model.cpp
src/Parser/: STEPParser.cpp  STLParser.cpp  ThreeMFParser.cpp  Utils.cpp
src/Slicer/: FacetSlicer.cpp
test/: test_slicer.cpp
test/examples/camera/: Camera - Tutor1-1.STL  Camera - Tutor2-1.STL  Camera.3MF  Camera.STEP
test/examples/cube/: Hollow_Cube.3MF  Hollow_Cube.STEP  Hollow_Cube.STL  Hollow_Cube_Ascii.stl
test/src/: test_slicer.cpp  test_stl_parser.cpp
